# hancock_real

./: .gitignore  INSTALL
src/: CMakeLists.txt  dead_code.cpp  hello.cpp  hello.hpp  main.cpp
src/actions/: CMakeLists.txt  action.cpp  action_cfg.cpp  sdp_simple.cpp  sdp_simple.hpp  serialize.cpp  serialize.hpp
src/adjmat_gen/: CMakeLists.txt  adjmat_gen.cpp  adjmat_gen.hpp  adjmat_gen_cfg.cpp  random_adjmat_gen.cpp  random_adjmat_gen.hpp
src/configuration/: CMakeLists.txt  configuration.cpp  configuration.hpp
src/python_bindings/: CMakeLists.txt  b.py  bindings.cpp
src/rand_walk_gen/: CMakeLists.txt  rand_walk_gen.hpp  sdp_prob.hpp  sdp_rand_walk_gen.cpp  sdp_rand_walk_gen.hpp  sdp_rand_walk_prob_gen.cpp  sdp_rand_walk_prob_gen.hpp
src/sdp_wrappers/: CMakeLists.txt  csdp_wrapper.cpp  csdp_wrapper.hpp  dsdp_wrapper.cpp  dsdp_wrapper.hpp  sdp_wrapper.cpp  sdp_wrapper.hpp  sdp_wrapper_cfg.cpp  sdp_wrappers_prec.hpp  sdpa_wrapper.cpp  sdpa_wrapper.hpp  sdplr_wrapper.cpp  sdplr_wrapper.hpp
src/seriation_gen/: CMakeLists.txt  sdp_prob.hpp  sdp_seriation_gen.cpp  sdp_seriation_gen.hpp  sdp_seriation_prob_gen.cpp  sdp_seriation_prob_gen.hpp  seriation_gen.cpp  seriation_gen.hpp  seriation_gen_cfg.cpp
src/tests/: CMakeLists.txt  config_test.cpp  csdp_wrapper_test.cpp  dsdp_wrapper_test.cpp  sdp_ser_prob_gen.cpp  sdp_seriation_gen.cpp  sdpa_wrapper_test.cpp  sdplr_wrapper_test.cpp
src/tools/: CMakeLists.txt  stats.cpp
src/util/: non_symmetric_B_still_good.m  randhypplane.m  visgraph.pl
